# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  ruff.toml
.github/workflows/: my-check.yml
task_manager/: constants.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_status.py  0004_alter_task_labels.py  0005_alter_task_author.py
task_manager/templates/: 404.html  base.html  base_create_update_form.html  homepage.html
task_manager/templates/labels/: delete.html  form.html  list.html
task_manager/templates/statuses/: delete.html  form.html  list.html
task_manager/templates/tasks/: delete.html  detail.html  list.html
task_manager/templates/users/: create.html  delete.html  form.html  list.html  update.html
task_manager/templates/users/auth/: login.html
task_manager/users/: constants.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_options.py
