[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager – task management system. It allows you to set tasks, assign executors, and change their statuses."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
