[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager – task management system. It allows you to set tasks, assign executors, and change their statuses."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "django-filter>=25.1",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "rollbar>=1.3.0",
    "whitenoise[brotli]>=6.9.0",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "ruff>=0.12.2",
]
